# bmad-manager

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Package.swift  README.md
.github/workflows/: build.yml  release-please.yml  release.yml  tauri-windows-check.yml  tauri-windows.yml
Resources/: Info.plist
Sources/BmadManager/: BmadManagerApp.swift
Sources/BmadManager/Models/: AgentApp.swift  AgentLaunchMethod.swift  AppSettings.swift  CodexWorkspaceNotice.swift  CompanyContext.swift  NewSessionPlacement.swift  ProjectItem.swift  TerminalKind.swift
Sources/BmadManager/Services/: AgentLaunchResolver.swift  AgentsFileWriter.swift  AppDetector.swift  AppLauncher.swift  AppLauncherProtocol.swift  CommandRunner.swift  CompanyContextService.swift  ContributionService.swift  GitHubClient.swift  GitRepoModuleSource.swift  KeychainTokenStore.swift  LocalZipModuleSource.swift  ModuleManifest.swift  ModuleSource.swift  PathDetector.swift  ProjectCoordinator.swift  ProjectCreator.swift  ProjectService.swift  ProjectUpdater.swift  SettingsRepository.swift  SettingsStore.swift  ShellProcess.swift  SkillsSyncService.swift  Subprocess.swift  TerminalDetector.swift  TerminalLauncher.swift  TerminalLauncherProtocol.swift  ZipExtractor.swift
Tests/BmadManagerTests/: AgentLaunchTests.swift  AgentsFileWriterTests.swift  AppDetectorTests.swift  AppLauncherTests.swift  AppSettingsTests.swift  CodexWorkspaceNoticeTests.swift  CommandRunnerTests.swift  CompanyContextServiceTests.swift  ContributionServiceTests.swift  FileSettingsRepositoryTests.swift  GitRepoModuleSourceTests.swift  LocalZipModuleSourceTests.swift  ModuleManifestTests.swift  PathDetectorTests.swift  ProjectCoordinatorTests.swift  ProjectCreatorTests.swift  ProjectServiceTests.swift  ProjectUpdaterTests.swift  SettingsStoreTests.swift  SkillsSyncServiceTests.swift  SubprocessTests.swift  TerminalLauncherTests.swift  ZipExtractorTests.swift
docs/: contributing-from-bmad-manager.md  global-skills-sync.md  skills-context-repo.md
packaging/scoop/: README.md
scripts/: build_release.sh  install.sh  make_icon.sh
tauri/: .gitignore  README.md  cucumber.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
tauri/src/: App.svelte  app.css  main.ts
tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
tauri/src-tauri/src/models/: company_context.rs  mod.rs  project_item.rs  settings.rs
tauri/src-tauri/src/platform/: macos.rs  mod.rs  stub.rs  windows.rs
tauri/src-tauri/src/services/: agent_launch.rs  agents_file.rs  bundled_tooling.rs  command_runner.rs  company_context.rs  contribution.rs  git_source.rs  github_client.rs  init_command.rs  mod.rs  module_manifest.rs  path_detection.rs  project_creator.rs  project_service.rs  project_updater.rs  settings_store.rs  skills_sync.rs  terminal.rs  token_store.rs  zip_source.rs
tauri/src-tauri/tests/: bdd.rs
tauri/src-tauri/tests/features/: agent_launch.feature  bundled_tooling.feature  company_context.feature  contribution.feature  init_command.feature  init_existing_folder.feature  open_folder.feature  path_detection.feature  project_service.feature  project_update.feature  settings.feature  skills_sync.feature  smoke.feature  terminal.feature  token_store.feature  zip_source.feature
tauri/src-tauri/tests/steps/: agent_launch.rs  bundled_tooling.rs  company_context.rs  contribution.rs  init_command.rs  init_existing_folder.rs  mod.rs  open_folder.rs  path_detection.rs  project_service.rs  project_update.rs  settings.rs  skills_sync.rs  smoke.rs  terminal.rs  token_store.rs  zip_source.rs
tauri/src-tauri/tests/support/: mod.rs
(+15 files in other folders)
