[package]
name = "bmad-manager"
version = "0.1.0"
description = "Cross-platform port of the BMad Manager macOS app (Windows-first)."
authors = ["Lauri Palokangas <lauri.palokangas@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bmad_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bmad-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
