[package]
name = "bmad-manager"
version = "0.1.0"
description = "Cross-platform port of the BMad Manager macOS app (Windows-first)."
authors = ["Lauri Palokangas <lauri.palokangas@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bmad_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bmad-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
trash = "5"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync"] }

[dev-dependencies]
cucumber = "0.21"
tempfile = "3"

[[test]]
name = "bdd"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
