[package]
name = "bmad-manager"
version = "0.1.14" # x-release-please-version
description = "Cross-platform port of the BMad Manager macOS app (Windows-first)."
authors = ["Lauri Palokangas <lauri.palokangas@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bmad_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bmad-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
trash = "5"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync"] }
# Used by the contribution flow to talk to the GitHub REST API. reqwest is
# already in the tree via tauri, so this adds no new TLS stack — only the
# `json` helper. Async client (commands are already async on tokio).
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2", "default-tls"] }

# Windows-only: the skills-repo token lives in Windows Credential Manager via
# keyring. Scoped to the Windows target so the Linux/CI build never pulls in a
# secret-service/libsecret backend — the platform stub uses a file fallback there.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[dev-dependencies]
cucumber = "0.21"
tempfile = "3"

[[test]]
name = "bdd"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
# Thin LTO instead of fat: keeps the optimized build but roughly halves
# the release link time in CI (fat LTO re-optimizes every dependency at
# link time) for a negligibly larger binary inside the ~198 MB zip.
lto = "thin"
opt-level = "s"
strip = true
